# Glauber_BW

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.project-state/: changelog.md  current-status.md  decisions.md  handoff.md  issues.md  tests.md  work-items.md
apps/: analyze_blastwave_v2pt.cpp  analyze_blastwave_vnpt.cpp  generate_blastwave_events.cpp  qa_blastwave_output.cpp
apps/generate_blastwave/: ProgressReporter.cpp  RootEventFileWriter.cpp  RootEventFileWriter.h  RunOptions.cpp  RunOptions.h
config/: PbPb_b1_dense_mix_glauber.cfg  PbPb_b3_dense_mix_glauber.cfg  PbPb_b6_dense_mix_glauber.cfg  PbPb_b6_dense_mix_glauber_ptest.cfg  PbPb_b8_dense_mix_glauber.cfg  b8.cfg  run.sh  test_023_dense.cfg  test_023_dense_eps3_only_fluct.cfg  test_023_dense_fluct.cfg  test_023_dense_mix.cfg  test_023_dense_mix_fluct_independent_pools.cfg  test_023_dense_mix_glauber.cfg  test_023_dense_newrap.cfg  test_023_dense_newrap_finegrid.cfg  test_023_dense_newrap_fluct.cfg  test_023_dense_newrap_fluct_independent_pools.cfg  test_023_dense_newrap_glauber.cfg  test_023_ellipse.cfg  test_023_ellipse_fluct.cfg  test_b8.cfg  test_b8_023_dense_newrap.cfg  test_b8_affine_effective.cfg  test_b8_affine_tensor.cfg  test_b8_density_normal_flow_trans.cfg  test_b8_density_normal_flow_trans_gradient.cfg  test_b8_flowpt.cfg  test_b8_gradient.cfg  test_b8_pdf.cfg  test_b8_pdf_evo.cfg  test_b8_response_023.cfg  test_b8_response_023_dense.cfg  test_b8_response_023_dense_mix.cfg  test_b8_response_023_ellipse.cfg
config/test/: test_023_dense.cfg  test_023_dense_eps2_only_fluct.cfg  test_023_dense_fluct_independent_pools.cfg  test_023_dense_mix.cfg  test_023_dense_mix_glauber.cfg  test_023_dense_newrap.cfg  test_023_dense_newrap_glauber.cfg  test_023_ellipse.cfg  test_023_ellipse_fluct_independent_pools.cfg  test_023_ellipse_glauber.cfg  test_b8_affine_effective.cfg  test_b8_affine_tensor.cfg  test_b8_density_normal_flow_trans.cfg  test_b8_density_normal_flow_trans_gradient.cfg  test_b8_flowpt.cfg  test_b8_pdf.cfg  test_b8_pdf_evo.cfg
docs/: C++ Blast-Wave Event Generator Plan.md  EventMedium与发射接口设计.md  README.md  affine方案流补偿.md  agent_guide.md  blastwave_generator_agent_handoff.md  v2计算.md  三阶响应测试V1.md  协方差椭圆法向流场默认替换执行计划.md  手记文档.md  数学物理公式流程说明.md  流体profile方案.md  演化V1_流体元权重升级  演化V2_梯度演化.md  演化V2_梯度演化计划.md  简单协方差椭圆流速度场.md  配置名整理高阶半径梯度混合最终方案.md  项目说明.md  高阶半径&梯度混合.md  高阶半径与梯度混合整合方案.md  高阶半径优化方案.md  高阶半径补充.md
docs/PLAN/: Affine-Effective修正执行方案.md  README.md  affine修正方案1.md  affine修正方案2.md  affine方案流补偿.md  agent_guide.md  blastwave_generator_agent_handoff.md  v2计算.md  三阶响应测试V1落地.md  三阶相应测试v2v3波动.md  半径再次修复.md  半径算法修复.md  协方差椭圆法向流场默认替换执行计划.md  流体profile.md  流体profile方案.md  演化V1_固定参数.md  简单协方差椭圆流速度场.md  配置名整理高阶半径梯度混合最终方案.md  高阶半径与梯度混合整合方案.md  高阶半径优化方案.md  高阶半径补充.md
docs/site/: build_site.sh  enhance.html  enhance.js  formulas.html  home.md  index.html  notes.html  overview.html  project.html  theme.css
include/blastwave/: BlastWaveGenerator.h  DensityFieldModel.h  DifferentialFlowCumulant.h  EmissionSampler.h  EventMedium.h  FlowFieldModel.h  MaxwellJuttnerMomentumSampler.h  PhysicsUtils.h  V2PtCumulant.h
include/blastwave/io/: DifferentialFlowRootPayload.h  OutputPathUtils.h  RootOutputSchema.h  V2PtRootPayload.h
notebooks/: environment-notebook_with_root.yml  vn_epsn_multivariate_regression.ipynb  vn_epsn_pyroot_th2_fit.ipynb  vn_epsn_regression.ipynb
project-state/: changelog.md  current-status.md  decisions.md  doc-sync-map.yml  guide.md  handoff.md  issues.md  tests.md  work-items.md
qiye/: analyze_toy3D.C  toy_glauber.C  toy_glauber2.C  toy_glauber_flow.C
reference/legacy-root-macros/: README.md  analyze_toy3D.C
scripts/: cmake.sh  run_PbPb.sh  run_b8_v3.sh  run_example_config.sh  run_newrep_test.sh  run_test.sh
src/: BlastWaveGenerator.cpp  BlastWaveGeneratorGeometry.cpp  BlastWaveGeneratorSampling.cpp  BlastWaveGeneratorValidation.cpp  DifferentialFlowCumulant.cpp  DifferentialFlowRootPayload.cpp  EmissionSampler.cpp  EventMedium.cpp  FlowFieldDensity.cpp  FlowFieldGeometry.cpp  FlowFieldModel.cpp  MaxwellJuttnerMomentumSampler.cpp  OutputPathUtils.cpp  PhysicsUtils.cpp  RootOutputSchema.cpp  V2PtCumulant.cpp  V2PtRootPayload.cpp
tests/: BlastWaveGeneratorResponseTest.cpp  DifferentialFlowCumulantTest.cpp  EmissionSamplerTest.cpp  FlowFieldModelTest.cpp  HarmonicGeometryTest.cpp  MaxwellJuttnerMomentumSamplerTest.cpp  OutputPathUtilsTest.cpp  PhysicsUtilsTest.cpp  ProgressReporterTest.cpp  RunOptionsTest.cpp  V2PtCumulantTest.cpp
